--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.sofka</groupId>
     <artifactId>plastic_surgery_ddd</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>plastic_surgery_ddd</name>
     <description>Domain Driven Design challenge</description>
 
     <properties>
